# agi

./: .gitignore  AGENTS.md  Dockerfile  EXP9_ITERATIONS.md  LICENSE  MVP_Requirements.md  OVERVIEW.md  PLAN_EXP9_FIX.md  README.md  README.ru.md  ROADMAP.md  SPEC.md  pyproject.toml  serve_demos.py  task_raw.txt
_docs/: TECH_DEBT.md  autonomous-log-2026-04-01-stage38fix.md  autonomous-log-2026-04-01-stage39.md  autonomous-log-2026-04-01-stage40.md  autonomous-log-2026-04-01-stage41.md  autonomous-log-2026-04-01-stage42.md  autonomous-log-2026-04-01-stage43.md  autonomous-log-2026-04-01.md  autonomous-log-2026-04-02-stage44.md  autonomous-log-2026-04-02-stage49.md  autonomous-log-2026-04-02-stage54.md  autonomous-log-2026-04-02-stage55.md  autonomous-log-2026-04-02.md  autonomous-log-2026-04-03-stage58.md  autonomous-log-2026-04-03.md  demo_episodes_bosslevel.json  demo_episodes_stage57.json  exp107_results.json  exp108_results.json  exp109_results.json  exp110_results.json  exp111_results.json  exp112_gpu_results.json  exp112_results.json  exp115_results.json  exp116_results.json  exp97_gpu_results.txt  research-associative-memory-2026-04-02.md  research-visual-encoders-2026-04-01.md  research_world_models_2026-04-03.md  stage78a_results.json  stage78b_results.json  stage78c_results.json  stage78c_results.txt  stage78c_v2_results.txt  stage79_learned_rules_nursery_on.jsonl  stage79_post82_results.json  stage79_results.json  stage79_results.txt  stage79_v2_results.txt  (+21 more)
configs/: crafter_textbook.yaml  default.yaml  full.yaml  medium.yaml  promoted_hypotheses.yaml  (+3 more)
(+982 files in other folders)
